Removed unnecessary interface